editors/tree-sitter-webfluent/grammar.js
    source_file: ($) => repeat($._declaration),

    // ─── Declarations ───────────────────────────────────────────────────

    _declaration: ($) =>
      choice(
        $.page_declaration,
        $.component_declaration,
        $.store_declaration,
        $.theme_declaration,
        $.app_declaration,
        $.type_declaration,
        $.enum_declaration,
        $.const_declaration,
        $.data_declaration,
        $.api_declaration,
        $.animation_declaration,
        $.test_declaration,
      ),

    // `const API = "/api"`
    page_declaration: ($) =>
      seq(
        "page",
        field("name", $._declaration_name),
        optional(field("attributes", $.page_attributes)),
        field("body", $.block),
      ),

    page_attributes: ($) => seq("(", sepBy(choice($.route_parameter, $.named_argument), ","), ")"),

    // `id: String` — a route parameter, told from an attribute by its type;
    // `String` is also a name an expression may be, so the parameter wins
    // where both readings survive.
    // Its type is never refined: `layout: Shell(crumb: "Blog")` is a call,
    // and a refined type written there would read as the same shape.
    route_parameter: ($) =>
      prec.dynamic(
        1,
        seq(
          field("name", $.identifier),
          ":",
          field("type", choice($.builtin_type, $.list_type, $.optional_type, $.named_type)),
        ),
      ),

    // `component Name(_ label: String, tone: Tone = .calm) { }`
    component_declaration: ($) =>
      seq(
        "component",
        field("name", $._declaration_name),
        optional(field("parameters", $.parameter_list)),
        field("body", $.block),
      ),

    // `part Header(_ text: String) { … }` — a component of its owner's,
    // called `Owner.Header`.
    store_declaration: ($) =>
      seq(
        "store",
        field("name", $._name),
        // `store Cart(scope: .route, eager: true)`
        optional(field("options", $.arguments)),
        field("body", $.block),
      ),

    theme_declaration: ($) =>
      seq("theme", field("name", $._name), field("body", $.theme_body)),

    theme_body: ($) => braced($, repeat($.token_declaration)),

    // `animation Pulse { from { opacity: 1 } 50% { opacity: 0.4 } to { opacity: 1 } }`
    token_declaration: ($) =>
      seq(field("name", $.property_name), ":", field("value", $.style_value), optional(";")),

    app_declaration: ($) => seq("app", field("body", $.block)),

    // `type Todo { id: String, done: Bool = false }`
    type_declaration: ($) =>
      seq(
        "type",
        field("name", $._name),
        // `type Admin = User { … }`: every field of `User`, and these.
        optional(seq("=", field("base", $._name))),
        braced($, seq(sepBy($.field_declaration, optional(",")), optional(","))),
      ),

    field_declaration: ($) =>
      seq(
        field("name", $._name),
        ":",
        field("type", $._type),
        optional(seq("=", field("default", $._expression))),
      ),

    // `enum Tone { calm, loud }`; a case may carry a payload:
    // `enum Status { idle, failed(reason: String) }`.
    enum_declaration: ($) =>
      seq(
        "enum",
        field("name", $._name),
        braced($, seq(sepBy($.enum_case_declaration, optional(",")), optional(","))),
      ),

    enum_case_declaration: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq("(", sepBy1($.field_declaration, ","), optional(","), ")")),
      ),

    // A page or component may be named after a built-in (`page Menu`).
    _declaration_name: ($) => choice($._name, $.builtin_component),

    _name: ($) => choice($.identifier, $.component_identifier),

    // ─── Parameters and types ───────────────────────────────────────────

    parameter_list: ($) => seq("(", sepBy($.parameter, ","), ")"),

    // `_ label: String` marks the one positional prop.
    parameter: ($) =>
      seq(
        optional(field("positional", "_")),
        field("name", $._name),
        ":",
        field("type", $._type),
        optional(seq("=", field("default", $._expression))),
      ),

    _type: ($) =>
      choice($.builtin_type, $.list_type, $.optional_type, $.refined_type, $.named_type),

    // `Number(1..=30)`, `String(minLength: 8)`, `Date(after: @2026-01-01)` —
    // a type with a condition its values must meet.
    builtin_type: (_) => choice("String", "Number", "Bool", "Map", "Any"),

    list_type: ($) => seq("[", $._type, "]"),

    optional_type: ($) => prec.left(seq($._type, "?")),

    named_type: ($) => $.component_identifier,

    // ─── Statements ─────────────────────────────────────────────────────

    // Statements are separated by lines; `;` puts two on one.
    block: ($) => braced($, repeat(seq($._statement, optional(";")))),

    _statement: ($) =>
      choice(
        $.state_declaration,
        $.derived_declaration,
        $.effect_declaration,
        $.action_declaration,
        $.use_declaration,
        $.resource_declaration,
        $.validate_declaration,
        $.connection_declaration,
        $.event_declaration,
        $.slot_declaration,
        $.part_declaration,
        $.timer_statement,
        $.cleanup_block,
        $.head_block,
        $.expect_statement,
        $.act_statement,
        $.let_declaration,
        $.try_statement,
        $.if_statement,
        $.for_statement,
        $.show_statement,
        $.sequence_statement,
        $.match_statement,
        $.navigate_statement,
        $.log_statement,
        $.return_statement,
        $.emit_statement,
        $.children,
        $.event_handler,
        $.style_block,
        $.transition_block,
        $.slot_fill,
        $.call_statement,
        $.element,
        $.assignment,
        $.expression_statement,
      ),

    // `state n = 0`; `persist theme = "light"` is kept across visits, and
    // may say where, at what version, and how an older value is brought
    // forward.
    state_declaration: ($) =>
      seq(
        choice("state", "persist"),
        field("name", $._name),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
        // Only a `persist` carries one, and the parser knows it from the
        // keyword; here it is the brace that follows the value.
        optional(field("policy", $.persist_policy)),
      ),

    derived_declaration: ($) =>
      seq(
        "derived",
        field("name", $._name),
        optional(seq(":", field("type", $._type))),
        "=",
        field("value", $._expression),
      ),

    // `validate email { required  minLength(8) "Use at least 8"  async "Taken" { … } }`
    action_declaration: ($) =>
      seq(
        "action",
        field("name", $._name),
        field("parameters", $.parameter_list),
        field("body", $.block),
      ),

    event_declaration: ($) =>
      prec.right(seq("event", field("name", $._name), optional(field("parameters", $.parameter_list)))),

    // `slot trailing`, or a bare `slot` for the default one; a scoped slot
    // names what it hands its fill: `slot row(item: Todo)`.
    slot_declaration: ($) =>
      prec.right(
        seq(
          "slot",
          optional(seq(field("name", $.identifier), optional(field("parameters", $.parameter_list)))),
        ),
      ),

    return_statement: ($) => prec.right(seq("return", optional($._expression))),

    // `emit toggle(todo.id)`
    children: (_) => "children",

    // ─── Control flow ───────────────────────────────────────────────────

    element: ($) =>
      prec.right(
        PREC.element,
        seq(
          field("name", $._element_name),
          optional(field("arguments", $.argument_list)),
          repeat(field("flag", $.flag)),
          optional(field("body", $.block)),
        ),
      ),

    _element_name: ($) => choice($.part, $.builtin_component, $.component_identifier),

    // `Table.Row`, `Card.Header`: a part of a built-in, or `Panel.Header`,
    // a part a component of the project declares — capitalised after the dot.
    part: ($) =>
      prec(
        PREC.element,
        seq(
          field("owner", choice($.builtin_component, $.component_identifier)),
          ".",
          field("name", choice($.builtin_component, $.component_identifier)),
        ),
      ),

    // `.primary`, `.lg`, `.required` — a boolean prop or an enum case,
    // written tight against the element: `Button("x").primary.lg`. The
    // absence of a space is what tells it from a case on the next line.
    builtin_component: (_) => prec(1, choice(...BUILTIN_COMPONENTS)),

    // ─── Arguments ──────────────────────────────────────────────────────

    // Element arguments: one positional value first, then `name: value`
    // pairs. The precedence settles `Foo(x)` at the start of a statement as
    // an element rather than a call.
    argument_list: ($) => prec(1, seq("(", sepBy($._argument, ","), ")")),

    _argument: ($) => choice($.named_argument, $._expression),

    named_argument: ($) =>
      seq(field("name", $.attribute_name), ":", field("value", $._expression)),

    // `bind`, `aria-pressed`, `data-tone`: hyphenated because an HTML
    // attribute may be.
    attribute_name: ($) => seq($.identifier, repeat(seq("-", $.identifier))),

    // Call arguments; `name: value` is accepted so `t("greeting", name:
    // user.name)`, `fetch(url, method: "POST")` and `Todo(id: 1)` read as
    // one call each.
    arguments: ($) => seq("(", sepBy($._argument, ","), ")"),

    // ─── Events and slots ───────────────────────────────────────────────

    // `on click { }`, `on keydown(event) { }`, `on toggle(id) { }`.
    // `on click(e) { }`; `on key("ctrl+k") { }` names the key it answers to.
    event_handler: ($) =>
      seq(
        "on",
        field("event", $.identifier),
        optional(
          seq(
            "(",
            choice(
              seq(field("key", $.string), optional(seq(",", field("parameter", $._name)))),
              field("parameter", $._name),
            ),
            ")",
          ),
        ),
        field("body", $.block),
      ),

    // `every(1000) { tick() }`, `after(500) { hide() }`.
    style_block: ($) =>
      seq("style", braced($, repeat(choice($.style_property, $.nested_rule)))),

    // `padding: 6px 0`, `--accent: {color}`, `background: $surface;`
    style_property: ($) =>
      seq(
        field(
          "name",
          choice($.property_name, $.vendor_property_name, $.custom_property_name),
        ),
        ":",
        field("value", $.style_value),
        optional(";"),
      ),

    // Raw CSS to the end of the line or a `;`, with tokens and splices.
    style_value: ($) => repeat1(choice($.style_text, $.design_token, $.interpolation)),

    // `&:hover { }`, `&[aria-current="page"] { }`, `@media (max-width: 768px) { }`.
    property_name: ($) =>
      seq(
        $.identifier,
        repeat(seq("-", choice($.identifier, seq($.number, optional($.identifier))))),
      ),

    // `-webkit-line-clamp`, `-moz-osx-font-smoothing` — a vendor prefix is
    // a property name that opens with a `-`, which is otherwise a
    // separator between two words of one.
    transition_block: ($) =>
      seq("transition", braced($, repeat($.style_property))),

    // ─── Assignment & expression statements ─────────────────────────────

    // `Store.load(id)` — a call on a store or component name, which at the
    // top of a page is set-up code. It outranks the element `Store` with a
    // flag `.load`, which could not take the parenthesis.
    assignment: ($) =>
      seq(
        field(
          "target",
          choice(
            $._name,
            $.member_expression,
            $.index_expression,
            $.store_member,
            // A state named `on`: the word is the event keyword only where a
            // handler can start, and a handler does not continue with `=`.
            alias("on", $.identifier),
          ),
        ),
        "=",
        field("value", $._expression),
      ),

    // A statement that is an expression does something: a call, a member
    // call, an `await`, or a bare name (a slot's content). A value — a
    // literal, an `if` or `match` value — is never a statement on its own,
    // which is what keeps `if a { go() }` the statement and `.lg { }`
    // after an element its flag and block.
    expression_statement: ($) =>
      prec.dynamic(
        1,
        choice(
          $.call_expression,
          $.member_expression,
          $.index_expression,
          $.unary_expression,
          $.identifier,
          $.component_identifier,
          $.builtin_component,
        ),
      ),

    // ─── Expressions ────────────────────────────────────────────────────

    _expression: ($) =>
      choice(
        $.range_expression,
        $.binary_expression,
        $.unary_expression,
        $.lambda,
        $.if_expression,
        $.match_expression,
        $._primary_expression,
      ),

    binary_expression: ($) => {
      const table = [
        [PREC.coalesce, "??"],
        [PREC.or, "||"],
        [PREC.and, "&&"],
        [PREC.equality, choice("==", "!=", "!==")],
        [PREC.comparison, choice("<", ">", "<=", ">=")],
        [PREC.additive, choice("+", "-")],
        [PREC.multiplicative, choice("*", "/", "%")],
      ];
      return choice(
        ...table.map(([precedence, operator]) =>
          prec.left(
            // @ts-ignore
            precedence,
            seq(
              field("left", $._expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $._expression),
            ),
          ),
        ),
      );
    },

    member_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field("object", $._expression),
          // `?.` reads null through null.
          choice(".", "?."),
          // Any word may follow a dot — `item.action`, `Array.from`.
          field("property", $._name),
        ),
      ),

    call_expression: ($) =>
      prec.left(
        PREC.postfix,
        seq(
          field(
            "function",
            choice(
              $.identifier,
              $.component_identifier,
              $.builtin_type,
              // A declared `type Row` is built as `Row(id: 1)`, a built-in's name.
              $.builtin_component,
              $.member_expression,
              $.index_expression,
              $.call_expression,
            ),
          ),
          field("arguments", $.arguments),
        ),
      ),

    enum_case: ($) => seq(".", field("name", $._name)),

    // `.failed("boom")` — a case with its payload.
    string: ($) => choice($._quoted_string, $.raw_string, $.block_string),

    _quoted_string: ($) =>
      seq(
        '"',
        repeat(choice($.string_content, $.escape_sequence, $.interpolation)),
        choice('"', alias(token.immediate(/\{"/), '"')),
      ),

    // `#"…"#`, with as many `#` as the text needs: no escapes, no splices,
    // so a sample of code goes in whole. One token, since what ends it is
    // the run of hashes it opened with.
    string_content: (_) =>
      choice(
        token.immediate(prec(2, /[^"\\{]+/)),
        token.immediate(/\{[^a-zA-Z_"\\{\[(]/),
        // A `{` before an escape opens nothing either: `"{\n}"`.
        token.immediate(/\{\\./),
      ),

    duration: (_) =>
      token(
        seq(
          /\d+(\.\d+)?/,
          ".",
          choice(
            "ms", "second", "seconds", "minute", "minutes", "hour", "hours",
            "day", "days", "week", "weeks",
          ),
        ),
      ),

    // `#0F766E` — a colour: three, four, six or eight hex digits.
    number: (_) => /\d+(\.\d+)?/,

    // `/pattern/flags`, where a value may start; a `/` after a value is the
    // operator, which the contextual lexer tells apart.
