editors/tree-sitter-webfluent/test/corpus/declarations.txt
================================================================================
Page with attributes, a route parameter and a layout
================================================================================

page Post(path: "/blog/:slug", title: "Post", slug: String, noindex: true, layout: Shell(crumb: "Blog")) {
    Text(slug)
}

--------------------------------------------------------------------------------

(source_file
  (page_declaration
    (component_identifier)
    (page_attributes
      (named_argument
        (attribute_name
          (identifier))
        (string
          (string_content)))
      (named_argument
        (attribute_name
          (identifier))
        (string
          (string_content)))
      (route_parameter
        (identifier)
        (builtin_type))
      (named_argument
        (attribute_name
          (identifier))
        (boolean))
      (named_argument
        (attribute_name
          (identifier))
        (call_expression
          (component_identifier)
          (arguments
            (named_argument
              (attribute_name
                (identifier))
              (string
                (string_content)))))))
    (block
      (element
        (builtin_component)
        (argument_list
          (identifier))))))

================================================================================
Page named after a built-in
================================================================================

page Menu(path: "/menu") {
    Text("m")
}

--------------------------------------------------------------------------------

(source_file
  (page_declaration
    (builtin_component)
    (page_attributes
      (named_argument
        (attribute_name
          (identifier))
        (string
          (string_content))))
    (block
      (element
        (builtin_component)
        (argument_list
          (string
            (string_content)))))))

================================================================================
Component with positional, typed, optional and defaulted props, events and slots
================================================================================

/// A row.
component TodoRow(_ label: String, todo: Todo, tags: [String], hint: String? = null, compact: Bool = false) {
    event toggle(id: String)
    slot trailing
    slot
    Text(label)
    trailing
    children
}

--------------------------------------------------------------------------------

(source_file
  (doc_comment)
  (component_declaration
    (component_identifier)
    (parameter_list
      (parameter
        (identifier)
        (builtin_type))
      (parameter
        (identifier)
        (named_type
          (component_identifier)))
      (parameter
        (identifier)
        (list_type
          (builtin_type)))
      (parameter
        (identifier)
        (optional_type
          (builtin_type))
        (null))
      (parameter
        (identifier)
        (builtin_type)
        (boolean)))
    (block
      (event_declaration
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (builtin_type))))
      (slot_declaration
        (identifier))
      (slot_declaration)
      (element
        (builtin_component)
        (argument_list
          (identifier)))
      (expression_statement
        (identifier))
      (children))))

================================================================================
Component without parameters
================================================================================

component Rule {
    Divider
}

--------------------------------------------------------------------------------

(source_file
  (component_declaration
    (component_identifier)
    (block
      (element
        (builtin_component)))))

================================================================================
Store with state, derived, actions and return
================================================================================

store CartStore {
    state items = []
    state total: Number = 0
    derived count = items.length
    action add(item: Map) {
        items = items.concat([item])
        return items.length
    }
}

--------------------------------------------------------------------------------

(source_file
  (store_declaration
    (component_identifier)
    (block
      (state_declaration
        (identifier)
        (array))
      (state_declaration
        (identifier)
        (builtin_type)
        (number))
      (derived_declaration
        (identifier)
        (member_expression
          (identifier)
          (identifier)))
      (action_declaration
        (identifier)
        (parameter_list
          (parameter
            (identifier)
            (builtin_type)))
        (block
          (assignment
            (identifier)
            (call_expression
              (member_expression
                (identifier)
                (identifier))
              (arguments
                (array
                  (identifier)))))
          (return_statement
            (member_expression
              (identifier)
              (identifier))))))))

================================================================================
Theme with raw values, hyphenated and digit-led names
================================================================================

theme Brand {
    color-primary: #8B5CF6
    radius-2xl: 24px
    font-sans: "Manrope", sans-serif
    shadow-md: 0 4px 12px rgba(0, 0, 0, 0.12)
}

--------------------------------------------------------------------------------

(source_file
  (theme_declaration
    (component_identifier)
    (theme_body
      (token_declaration
        (property_name
          (identifier)
          (identifier))
        (style_value
          (style_text)))
      (token_declaration
        (property_name
          (identifier)
          (number)
          (identifier))
        (style_value
          (style_text)))
      (token_declaration
        (property_name
          (identifier)
          (identifier))
        (style_value
          (style_text)))
      (token_declaration
        (property_name
          (identifier)
          (identifier))
        (style_value
          (style_text))))))

================================================================================
Type and enum declarations
================================================================================

type Todo { id: String, title: String, done: Bool = false, tone: Tone = .neutral }
enum Tone { neutral, info, danger }

--------------------------------------------------------------------------------

(source_file
  (type_declaration
    (component_identifier)
    (field_declaration
      (identifier)
      (builtin_type))
    (field_declaration
      (identifier)
      (builtin_type))
    (field_declaration
      (identifier)
      (builtin_type)
      (boolean))
    (field_declaration
      (identifier)
      (named_type
        (component_identifier))
      (enum_case
        (identifier))))
  (enum_declaration
    (component_identifier)
    (enum_case_declaration
      (identifier))
    (enum_case_declaration
      (identifier))
    (enum_case_declaration
      (identifier))))

================================================================================
App with user components and a bare router
================================================================================

app {
    Navbar(brand: "Ledger") { Navbar.Links { Link("Home", to: "/") } }
    Router
    SiteFooter
}

--------------------------------------------------------------------------------

(source_file
  (app_declaration
    (block
      (element
        (builtin_component)
        (argument_list
          (named_argument
            (attribute_name
              (identifier))
            (string
              (string_content))))
        (block
          (element
            (part
              (builtin_component)
              (component_identifier))
            (block
              (element
                (builtin_component)
                (argument_list
                  (string
                    (string_content))
                  (named_argument
                    (attribute_name
                      (identifier))
                    (string
                      (string_content)))))))))
      (element
        (builtin_component))
      (element
        (component_identifier)))))

================================================================================
Comments and doc comments are extras
================================================================================

page Home(path: "/") { // trailing
    /* block */
    Text("a") /// not a doc
}

--------------------------------------------------------------------------------

(source_file
  (page_declaration
    (component_identifier)
    (page_attributes
      (named_argument
        (attribute_name
          (identifier))
        (string
          (string_content))))
    (block
      (comment)
      (comment)
      (element
        (builtin_component)
        (argument_list
          (string
            (string_content))))
      (doc_comment))))
